# prism

./: .git-blame-ignore-revs  .gitignore  .java-version  .ruby-gemset  .scalafmt.conf  CODEOWNERS  Gemfile  LICENSE  README.md  TODO  build.sbt  deploy.json  marauder  marauder-0.1.0.gem  marauder.gemspec  package-lock.json  riff-raff.yaml  sbt
.github/: dependabot.yml
.github/workflows/: ci.yml  dep-updates_set-automerge.yml  sbt-dependency-graph.yaml  snyk.yml
api/app/: AppComponents.scala  AppLoader.scala
api/conf/: application-logger.xml  application.conf  logback.xml  routes
api/test/: ApiSpec.scala
app/: AppComponents.scala  AppLoader.scala  Global.scala  PrismApplicationLoader.scala  PrismFilters.scala  RequestLoggingFilter.scala
app/agent/: Metadata.scala  apiModel.scala  collector.scala  model.scala  origin.scala  reference.scala
app/collectors/: Collector.scala  acmCertificates.scala  bucket.scala  cloudformationStacks.scala  collector.scala  data.scala  hardware.scala  image.scala  instance.scala  lambda.scala  loadBalancers.scala  (+12 more)
cdk/: .gitignore  README.md  cdk.json  eslint.config.mjs  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
cli-rs/: Cargo.toml
cli-rs/src/: main.rs
cloudformation/: prism-role.template  prism-user.template  prism.template
conf/: application-logger.xml  application.conf  deploy.json  logback.xml  routes
marauder/: .ruby-gemset  Gemfile  README.md  TODO  marauder.gemspec
project/: plugins.sbt
scripts/: ci  setup
test/: ApiSpec.scala  CollectorModelSpec.scala  OwnerApiSpec.scala
(+117 files in other folders)
