[package]
name = "prism_cli"
version = "0.1.0"
authors = ["Simon Hildrew <simon@hildrew.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.8"
snafu = "0.6.2"
tokio = { version = "0.2.11", features = ["full"] }
reqwest = { version = "0.10.1", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
prettytable-rs = "0.8.0"